project('ASCII Rogue', 'cpp') # Name of the project
executable('rogueGame',
           [
            'src/main.cpp',
            'src/Player.cpp',
            'src/Game.cpp',
            'src/Monster.cpp',
            'src/Entity.cpp',
           ],
           include_directories : include_directories('include')
)
